--- a/package.json
+++ b/package.json
@@ -6,24 +6,42 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "timers": "fake"
   },
   "dependencies": {
+    "2": "^3.0.0",
     "@react-native-masked-view/masked-view": "0.2.8",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
     "@react-navigation/stack": "^6.3.12",
+    "@types/jest": "^29.4.0",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "jest": "^26.6.3",
+    "jest-expo": "^47.0.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.1.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-svg": "13.4.0",
+    "react-native-svg-transformer": "^1.0.0",
     "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
+  },
+  "typeAcquisition": {
+    "include": [
+      "jest"
+    ]
   },
   "private": true
 }
