--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "postinstall": "patch-package",
     "test": "jest"
   },
   "jest": {
@@ -27,6 +28,7 @@
     "jest-expo": "^47.0.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.1.2",
+    "patch-package": "^6.5.1",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-elements": "^3.4.3",
