--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "2": "^3.0.0",
+    "@react-native-community/checkbox": "^0.5.14",
     "@react-native-masked-view/masked-view": "0.2.8",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
