--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
     "@types/jest": "^29.4.0",
     "axios": "^1.3.2",
     "expo": "~47.0.12",
+    "expo-asset": "~8.7.0",
+    "expo-checkbox": "^2.3.1",
+    "expo-file-system": "~15.1.1",
+    "expo-sqlite": "~11.0.0",
     "expo-status-bar": "~1.4.2",
     "jest": "^26.6.3",
     "jest-expo": "^47.0.1",
     "mysql": "^2.18.1",
-    "mysql2": "^3.1.2",
+    "mysql2": "^3.3.5",
     "patch-package": "^6.5.1",
     "react": "18.1.0",
     "react-native": "0.70.5",
